# Mushak

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
packaging/msix/: AppxManifest.xml  README.md  build-msix.ps1
packaging/scoop/: mushak.json
packaging/winget/: Divyang.Mushak.installer.yaml  Divyang.Mushak.locale.en-US.yaml  Divyang.Mushak.yaml
packaging/wix/: License.rtf  Mushak.wxs
src/: config.rs  conflicts.rs  gestures.rs  hook.rs  injector.rs  logging.rs  main.rs  profiles.rs  resident.rs  single_instance.rs  startup.rs  state.rs  statusfile.rs  tray.rs
src/gui/: actions.rs  buttons.rs  chrome.rs  device_tab.rs  fonts.rs  gestures_tab.rs  icons.rs  mod.rs  picker.rs  profiles_tab.rs  scroll.rs  theme.rs  uiprefs.rs  widgets.rs
src/hidpp/: device.rs  mod.rs  protocol.rs  transport.rs
src/hidpp/features/: battery.rs  device_info.rs  dpi.rs  feature_set.rs  hires_wheel.rs  mod.rs  reprog.rs  root.rs  smartshift.rs
